Collect-TV-20180201/src/objects/cgsss__Google_Contact_Imp_Exp_Status__c.object
<CustomObject>
    <description>The status of a contact for a particular user</description>
    <fields>
        <fullName>cgsss__Contact_ID__c</fullName>
        <description>Contact this refers to</description>
        <label>Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cgsss__Google_ID__c</fullName>
        <description>ID as defined by google</description>
        <label>Google ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cgsss__Google_Strong_ETag__c</fullName>
        <label>Google Strong ETag</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cgsss__SF_Last_Mod_To_Google__c</fullName>
        <label>SF Last Mod To Google</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Google Contact Imp Exp Status</label>
    <listViews>
        <fullName>cgsss__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Google Contact Imp Exp Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Contact Imp Exp Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>